@@ -1,3 +1,7 @@
+2011-09-16  Joel Brobecker  <brobecker@adacore.com>
+
+	* ada-tasks.c (struct atcb_fieldnos): Renames struct tcb_fieldnos.
+
 2011-09-16  Tristan Gingold  <gingold@adacore.com>
 
 	* fork-child.c (fork_inferior): Update comment.  Use alloca
